[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/LanMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/BEBAS/bebas_menuButton_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Font/BEBAS/bebas_menuTitle_dynamicfont.tres" type="DynamicFont" id=3]

[node name="LanMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="hostButton" type="Button" parent="."]
margin_left = 1422.0
margin_top = 263.0
margin_right = 1858.0
margin_bottom = 363.0
custom_fonts/font = ExtResource( 2 )
text = "Host"

[node name="joinButton" type="Button" parent="."]
margin_left = 1424.0
margin_top = 381.0
margin_right = 1862.0
margin_bottom = 483.0
custom_fonts/font = ExtResource( 2 )
text = "Join"

[node name="backButton" type="Button" parent="."]
margin_left = 1429.0
margin_top = 912.0
margin_right = 1862.0
margin_bottom = 1014.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="nameTextEdit" type="TextEdit" parent="."]
margin_left = 1419.37
margin_top = 165.449
margin_right = 1863.37
margin_bottom = 230.449
custom_fonts/font = ExtResource( 2 )
readonly = true

[node name="gameItemList" type="ItemList" parent="."]
margin_left = 23.0
margin_top = 107.0
margin_right = 1397.0
margin_bottom = 1034.0
custom_fonts/font = ExtResource( 2 )
allow_reselect = true

[node name="menuTitleLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
custom_fonts/font = ExtResource( 3 )
text = "LAN MENU"

[node name="refreshButton" type="Button" parent="."]
margin_left = 1239.74
margin_top = 55.9531
margin_right = 1389.74
margin_bottom = 100.953
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "REFRESH"

[node name="lanSearchTimeout" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="playerNameLabel" type="Label" parent="."]
margin_left = 1423.03
margin_top = 112.407
margin_right = 1491.03
margin_bottom = 151.407
custom_fonts/font = ExtResource( 2 )
text = "Player NAME:"

[node name="noGamesFoundLabel" type="Label" parent="."]
margin_left = 53.7799
margin_top = 134.043
margin_right = 206.78
margin_bottom = 173.043
custom_fonts/font = ExtResource( 2 )
text = "No games found :("

[connection signal="button_down" from="hostButton" to="." method="_on_hostButton_button_down"]
[connection signal="button_down" from="joinButton" to="." method="_on_joinButton_button_down"]
[connection signal="button_down" from="backButton" to="." method="_on_backButton_button_down"]
[connection signal="item_selected" from="gameItemList" to="." method="_on_gameItemList_item_selected"]
[connection signal="nothing_selected" from="gameItemList" to="." method="_on_gameItemList_nothing_selected"]
[connection signal="button_down" from="refreshButton" to="." method="_on_refreshButton_button_down"]
[connection signal="timeout" from="lanSearchTimeout" to="." method="_on_lanSearchTimeout_timeout"]
